--- a/requirements.txt
+++ b/requirements.txt
@@ -1,103 +1,170 @@
-aiohttp==3.8.4
-aiosignal==1.3.1
-altair==4.2.2
-appdirs==1.4.4
-async-timeout==4.0.2
-attrs==23.1.0
-blinker==1.6.2
-cachetools==5.3.0
-certifi==2023.5.7
-charset-normalizer==3.1.0
-click==8.1.3
-colorama==0.4.6
-contourpy==1.0.7
-coverage==7.2.5
-cycler==0.11.0
-dataclasses-json==0.5.7
-decorator==5.1.1
-docker-pycreds==0.4.0
-entrypoints==0.4
-et-xmlfile==1.1.0
-faiss-cpu==1.7.4
-Flask==2.3.2
-fonttools==4.39.4
-frozenlist==1.3.3
-gitdb==4.0.10
-GitPython==3.1.31
-greenlet==2.0.2
-idna==3.4
-importlib-metadata==6.6.0
-iniconfig==2.0.0
-itsdangerous==2.1.2
-Jinja2==3.1.2
-joblib==1.2.0
-jsonschema==4.17.3
-kiwisolver==1.4.4
-langchain==0.0.174
-markdown-it-py==2.2.0
-MarkupSafe==2.1.2
-marshmallow==3.19.0
-marshmallow-enum==1.5.1
-matplotlib==3.7.1
-mdurl==0.1.2
-multidict==6.0.4
-mypy==1.3.0
-mypy-extensions==1.0.0
-numexpr==2.8.4
-numpy==1.24.3
-openai==0.27.7
-openapi-schema-pydantic==1.2.4
-openpyxl==3.1.2
-packaging==23.1
-pandas==2.0.1
-pandas-stubs==2.0.1.230501
-pathtools==0.1.2
-Pillow==9.5.0
-plotly==5.14.1
-pluggy==1.0.0
-polars==0.17.14
-protobuf==3.20.3
-psutil==5.9.5
-pyarrow==12.0.0
-pydantic==1.10.7
-pydeck==0.8.1b0
-Pygments==2.15.1
-Pympler==1.0.1
-pyparsing==3.0.9
-pypdf==3.8.1
-pyrsistent==0.19.3
-pytest==7.3.1
-python-dateutil==2.8.2
-python-dotenv==1.0.0
-pytz==2023.3
-PyYAML==6.0
-regex==2023.5.5
-requests==2.30.0
-rich==13.3.5
-scikit-learn==1.2.2
-scipy==1.10.1
-sentry-sdk==1.23.1
-setproctitle==1.3.2
-six==1.16.0
-smmap==5.0.0
-SQLAlchemy==2.0.15
-streamlit==1.22.0
-tenacity==8.2.2
-threadpoolctl==3.1.0
-tiktoken==0.4.0
-toml==0.10.2
-toolz==0.12.0
-tornado==6.3.2
-tqdm==4.65.0
-types-pytz==2023.3.0.0
-typing-inspect==0.8.0
-typing_extensions==4.5.0
-tzdata==2023.3
-tzlocal==5.0.1
-urllib3==1.26.15
-validators==0.20.0
-wandb==0.15.3
-watchdog==3.0.0
-Werkzeug==2.3.4
-yarl==1.9.2
-zipp==3.15.0
+aiohttp
+aiosignal
+altair
+anyio
+appdirs
+argon2-cffi
+argon2-cffi-bindings
+arrow
+asttokens
+async-lru
+async-timeout
+attrs
+Babel
+backcall
+beautifulsoup4
+bleach
+blinker
+cachetools
+certifi
+cffi
+charset-normalizer
+click
+colorama
+comm
+contourpy
+coverage
+cycler
+dataclasses-json
+debugpy
+decorator
+defusedxml
+docker-pycreds
+entrypoints
+et-xmlfile
+executing
+faiss-cpu
+fastjsonschema
+Flask
+fonttools
+fqdn
+frozenlist
+gitdb
+GitPython
+greenlet
+idna
+importlib-metadata
+iniconfig
+ipykernel
+ipython
+isoduration
+itsdangerous
+jedi
+Jinja2
+joblib
+json5
+jsonpointer
+jsonschema
+jupyter-events
+jupyter-lsp
+jupyter_client
+jupyter_core
+jupyter_server
+jupyter_server_terminals
+jupyterlab
+jupyterlab-pygments
+jupyterlab_server
+kiwisolver
+langchain
+langchainplus-sdk
+markdown-it-py
+MarkupSafe
+marshmallow
+marshmallow-enum
+matplotlib
+matplotlib-inline
+mdurl
+mistune
+multidict
+mypy
+mypy-extensions
+nbclient
+nbconvert
+nbformat
+nest-asyncio
+notebook_shim
+numexpr
+numpy
+openai
+openapi-schema-pydantic
+openpyxl
+overrides
+packaging
+pandas
+pandas-stubs
+pandocfilters
+parso
+pathtools
+pickleshare
+Pillow
+platformdirs
+plotly
+pluggy
+polars
+prometheus-client
+prompt-toolkit
+protobuf
+psutil
+pure-eval
+pyarrow
+pycparser
+pydantic
+pydeck
+Pygments
+Pympler
+pyparsing
+pypdf
+pyrsistent
+pytest
+python-dateutil
+python-dotenv
+python-json-logger
+pytz
+pywin32
+pywinpty
+PyYAML
+pyzmq
+regex
+requests
+rfc3339-validator
+rfc3986-validator
+rich
+scikit-learn
+scipy
+Send2Trash
+sentry-sdk
+setproctitle
+six
+smmap
+sniffio
+soupsieve
+SQLAlchemy
+stack-data
+streamlit
+tenacity
+terminado
+threadpoolctl
+tiktoken
+tinycss2
+toml
+toolz
+tornado
+tqdm
+traitlets
+types-pytz
+typing-inspect
+typing_extensions
+tzdata
+tzlocal
+uri-template
+urllib3
+validators
+wandb
+watchdog
+wcwidth
+webcolors
+webencodings
+websocket-client
+Werkzeug
+yarl
+zipp
